ver2.1/submit_file/a_compile
../submit_file/Main.java:1: error: reached end of file while parsing
a
^
1 error
